#cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

#set(TARGET main)
#project(${TARGET})

#include_directories(${TARGET}
#    PRIVATE
#        ${CMAKE_CURRENT_SOURCE_DIR}
#)

#find_package(Threads)

#target_compile_features(${TARGET} PUBLIC cxx_std_17)
#target_link_libraries(${TARGET} PRIVATE Threads::Threads)